--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-vector-icons": "^10.0.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "0.3.17"
   },
@@ -31,6 +32,7 @@
     "@tsconfig/react-native": "^3.0.0",
     "@types/node": "^16.11.10",
     "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.14",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
